[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "g4f>=0.5.2.9",
    "nodriver>=0.46.1",
    "platformdirs>=4.3.8",
    "requests>=2.32.3",
    "selenium>=4.32.0",
    "undetected-chromedriver>=3.5.5",
    "webdriver-manager>=4.0.2",
]
