[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-cors>=6.0.0",
    "flask>=3.1.1",
    "g4f==0.5.2.9",
    "numpy>=2.2.6",
    "pillow>=11.2.1",
    "requests>=2.32.3",
    "playwright>=1.52.0",
    "edgegpt==0.3.9",
    "httpx==0.23.3",
    "nodriver>=0.46.1",
    "platformdirs>=4.3.8",
    "beautifulsoup4>=4.13.4",
    "lxml>=5.4.0",
    "browser-cookie3>=0.20.1",
    "selenium>=4.33.0",
    "undetected-chromedriver>=3.5.5",
]
