[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-cors>=6.0.0",
    "flask>=3.1.1",
    "g4f==0.5.2.9",
    "numpy>=2.2.6",
    "pillow>=11.2.1",
    "requests>=2.32.3",
    "beautifulsoup4>=4.13.4",
    "lxml>=5.4.0",
    "duckduckgo-search>=8.0.2",
]
